--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 
-python==3.7.7
-Flask==1.1.2
-gunicorn==19.9.0
-pandas==1.0.5
-requests==2.22.0
-scikit-learn==0.23.1
-numpy==1.18.1
+python
+flask
+gunicorn
+pandas
+requests
+scikit-learn
+numpy
