--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-python-3.6.11
-flask
-gunicorn
-pandas
-requests
-scikit-learn
-numpy
+Flask==1.1.2
+gunicorn==19.9.0
+pandas==1.0.5
+requests==2.22.0
+scikit-learn==0.23.1
+numpy==1.18.1
+python-3.7.2
